--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.4.1",
+    "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
