--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,11 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+www/
+android/.gradle/
+android/.idea/
+android/app/build/
+ios/Pods/
+ios/build/
+.env
